--- a/html/index.html
+++ b/html/index.html
@@ -170,7 +170,7 @@
                     <p>This pages was generate by :</p>
                         <ul>
                             <li>Name : Eko Purnama Azi</li>
-                            <li>NIM : </li>
+                            <li>NIM : 1122140030</li>
                             <li>Class : TI-KS</li>
                             <li>Course : Pengantar Cloud Computing</li>
                         </ul>
