--- a/html/index.html
+++ b/html/index.html
@@ -73,7 +73,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Welcome to <b>Github ekopurnama25</b> Pages</span>
+                        <span class="name">Welcome to <b>Website</b> EKO PURNAMA AZI Pages</span>
                         <hr class="star-light">
                         <span class="skills">This website is building with docker, is it cool..!</span>
                     </div>
